# biblioteca

./: .gitignore  Cargo.toml  README.md
data/: libreria.json
src/: biblioteca.rs  errores.rs  main.rs
src/commands/: agregar_libros.rs  listar_libros.rs  listar_prestamos_vigentes.rs  mod.rs  registrar_devolucion.rs  registrar_prestamos.rs  reporte_genero.rs  reportes.rs
src/models/: libro.rs  mod.rs  prestamo.rs
src/storage/: storage.rs
