[package]
name = "biblioteca"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version="0.4.42", features = ["serde"]}
clap = {version = "4.5.53", features = ["derive"]}
colored = "3.0.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.147"
uuid = {version = "1.19.0", features = ["serde", "v4"]}
