[package]
name = "librero"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Facundo Alejandro Caniza"]
description = "Sistema de gestión de préstamos de libros"



[dependencies]
chrono = {version="0.4.42", features = ["serde"]}
clap = {version = "4.5.53", features = ["derive"]}
colored = "3.0.0"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.147"
uuid = {version = "1.19.0", features = ["serde", "v4"]}
